--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -892,7 +892,7 @@ Metadata:
           - EULA
           - KeyName
       - Label:
-          default: Vault and DR information
+          default: Primary Vault and DR information
         Parameters:
           - VaultPrivateIP
           - DRPrivateIP
