--- a/aws/DRVault-Single-Deployment.yaml
+++ b/aws/DRVault-Single-Deployment.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: This template handles the deployment of CyberArk Vault DR to an existing network infrastructure
+Description: This template handles the deployment of CyberArk DR Vault to an existing network infrastructure
 Resources:
   LogGroup:
     Type: AWS::Logs::LogGroup
@@ -188,6 +188,138 @@ Resources:
     DependsOn:
       - LambdaDeployRole
       - VaultDRMachine
+  LambdaRemovePermissionsRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Policies:
+        - PolicyName: CloudWatch
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - logs:CreateLogGroup
+                  - logs:CreateLogStream
+                  - logs:DescribeLogGroups
+                  - logs:DescribeLogStreams
+                  - logs:PutLogEvents
+                Resource:
+                  - '*'
+        - PolicyName: KMSPolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - kms:DescribeKey
+                Resource:
+                  - '*'
+  VaultBootstrapIAMPolicy:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: VaultBootstrapIAMPolicy
+      PolicyDocument:
+        Statement:
+          - Effect: Allow
+            Action:
+              - iam:GetRole
+              - iam:DeleteRolePolicy
+              - iam:PutRolePolicy
+            Resource:
+              - !GetAtt VaultInstancesRole.Arn
+              - !GetAtt LambdaRemovePermissionsRole.Arn
+      Roles:
+        - !Ref 'LambdaRemovePermissionsRole'
+  RemovePermissionLambda:
+    Type: AWS::Lambda::Function
+    Properties:
+      Description: Change Policies of VaultInstancesRole IAM Role
+      Code:
+        ZipFile: |-
+          import json
+          import boto3
+          import uuid
+          import cfnresponse
+
+          def lambda_handler(event, context):
+            physicalResourceId = str(uuid.uuid4())
+            if 'PhysicalResourceId' in event:
+              physicalResourceId = event['PhysicalResourceId']
+            if event['RequestType'] == 'Create':
+              try:
+                print("Creating AWS CloudFormation")
+                print("Start RemovePermissionLambda execution")
+                client = boto3.client('iam')
+
+                # Get vault role info
+                vault_role = client.get_role(RoleName=event['ResourceProperties']['vault_role_name'])['Role']
+                print("Retrieve IAM Role ID: {0}".format(vault_role["RoleId"]))
+
+                # Delete old Policies
+                list = [event['ResourceProperties']['vault_role_name'],event['ResourceProperties']['lambda_role_name']]
+                inline_policies = ["VaultInstancesKMSPolicy","VaultSSMPolicy","VaultFilesBucketAccess","KMSPolicy", "VaultBootstrapIAMPolicy"]
+                print("Trying to delete inline policies from {0} IAM Role".format(vault_role["RoleId"]))
+                for role in list:
+                  print("Delete policies in {0} IAM Role".format(role))
+                  for inline_policy in inline_policies:
+                    try:
+                      delete = client.delete_role_policy(RoleName=role, PolicyName=inline_policy)
+                      print("Delete policy: {0}".format(inline_policy))
+                    except:
+                      print("Didn\'t find policy: {0}".format(inline_policy))
+                print("Finish to delete inline policies from {0} IAM Role".format(vault_role["RoleId"]))
+
+                # Get KMS ID
+                kms = boto3.client('kms', region_name=event['ResourceProperties']['region'])
+                kms_arn = kms.describe_key(KeyId="alias/vault/{0}".format(event['ResourceProperties']['instance']))['KeyMetadata']['Arn']
+                print("Retrieve KMS ARN: {0}".format(kms_arn))
+
+                # Create inline policy
+                kms_policy =  {
+                  "Statement": [
+                    {
+                      "Action": [
+                        "kms:Encrypt",
+                        "kms:Decrypt"
+                        ],
+                        "Resource": kms_arn,
+                        "Effect": "Allow"
+                    }
+                  ]
+                }
+
+                response = client.put_role_policy(RoleName=vault_role['RoleName'], PolicyName="VaultInstancesKMSPolicy", PolicyDocument=json.dumps(kms_policy))
+                print("Add inline policy VaultInstancesKMSRestrictedPolicy to {0} IAM Role".format(vault_role["RoleId"]))
+
+                return cfnresponse.send(event, context, cfnresponse.SUCCESS, None, {}, physicalResourceId)
+              except Exception as E:
+                print("Error in Lambda execution: {0}".format(E))
+                return cfnresponse.send(event, context, cfnresponse.FAILED,E,{}, physicalResourceId)
+            elif event['RequestType'] == 'Delete':
+              print("Deleting AWS CloudFormation")
+              return cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, physicalResourceId)
+      Runtime: python3.7
+      Handler: index.lambda_handler
+      Timeout: 60
+      Role: !GetAtt 'LambdaRemovePermissionsRole.Arn'
+  RemovePermissionVault:
+    Type: AWS::CloudFormation::CustomResource
+    Version: '1.0'
+    Properties:
+      ServiceToken: !GetAtt 'RemovePermissionLambda.Arn'
+      vault_role_name: !Ref 'VaultInstancesRole'
+      lambda_role_name: !Ref 'LambdaRemovePermissionsRole'
+      instance: !Ref 'VaultDRMachine'
+      region: !Ref 'AWS::Region'
   VaultInstancesProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
@@ -264,14 +396,6 @@ Resources:
                   - kms:UpdateKeyDescription
                   - kms:CreateAlias
                 Resource: '*'
-        - PolicyName: VaultBootstrapIAMPolicy
-          PolicyDocument:
-            Statement:
-              - Effect: Allow
-                Action:
-                  - iam:DeleteRolePolicy
-                  - iam:PutRolePolicy
-                Resource: '*'
   VaultDRMachine:
     Type: AWS::EC2::Instance
     Properties:
@@ -301,20 +425,15 @@ Resources:
       AWS::CloudFormation::Init:
         configSets:
           ascending:
-            - configSSMAndHostname
+            - configSSMAndHostnameAndTagKMS
             - configServices
             - configSignal
-        configSSMAndHostname:
-          files:
-            C:\CyberArk\Deployment\KMSPolicy.json:
-              content:
-                Fn::Sub: |-
-                  {"Statement": [{"Action": ["kms:Encrypt", "kms:Decrypt"], "Resource": "arn:${AWS::Partition}:kms:${AWS::Region}:${AWS::AccountId}:key/KMSKEYID_PLACEHOLDER", "Effect": "Allow"}]}
+        configSSMAndHostnameAndTagKMS:
           services:
             windows:
               AmazonSSMAgent:
-                enabled: 'true'
-                ensureRunning: 'true'
+                enabled: true
+                ensureRunning: true
                 files:
                   - C:\Program Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json
           commands:
@@ -341,22 +460,22 @@ Resources:
               waitAfterCompletion: 0
             4-postInstall:
               command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -IsPrimaryOrDR "DR" -SSMDRPassParameterID ${StoreDRPassword.SsmId} -PrimaryVaultIP ${VaultPrivateIP} -Region ${AWS::Region} -Secret ${Secret} -DRUser "DRAdmin"
+                powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -SSMDRPassParameterID ${StoreDRPassword.SsmId} -IsPrimaryOrDR "DR" -PrimaryVaultIP ${VaultPrivateIP} -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region} -Secret ${Secret}
               waitAfterCompletion: 0
-            5-removePermissions:
+            5-changeKMSTag:
               command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\VaultRemoveIAMPolicies.ps1 -Role ${VaultInstancesRole}
+                powershell.exe -File C:\CyberArk\Deployment\VaultTagKMS.ps1 -Role ${VaultInstancesRole} -Region ${AWS::Region}
               waitAfterCompletion: 0
+            6-ChangeHostName:
+              command: !Sub >
+                powershell.exe -Command Rename-Computer -NewName ${VaultHostName} -Force -Restart
+              waitAfterCompletion: forever
         configSignal:
           commands:
             0-signalCompletion:
               command: !Sub >
                 cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource VaultDRMachine --region ${AWS::Region}
               waitAfterCompletion: 0
-            6-ChangeHostName:
-              command: !Sub >
-                powershell.exe -Command Rename-Computer -NewName ${VaultHostName} -Force -Restart
-              waitAfterCompletion: forever
     CreationPolicy:
       ResourceSignal:
         Timeout: PT20M
@@ -374,11 +493,11 @@ Parameters:
     ConstraintDescription: Can contain only ASCII characters.
   VaultFilesBucket:
     Type: String
-    Description: Enter the name of the bucket containing the license and recovery
+    Description: Enter the name of the S3 bucket containing the license and recovery public key.
       public key.
   LicenseFile:
     Type: String
-    Description: Enter the path of the license file within the bucket.
+    Description: Enter the path of the Vault license file within the bucket.
     Default: license.xml
   RecoveryPublicKey:
     Type: String
@@ -386,7 +505,7 @@ Parameters:
     Default: recpub.key
   VaultPrivateIP:
     Type: String
-    Description: Enter the Vault Private IP.
+    Description: Enter the Primary Vault Private IP.
   VaultAdminPassword:
     Type: String
     Description: Enter a password for the Vault Administrator user.
@@ -394,7 +513,7 @@ Parameters:
     MinLength: 8
   VaultMasterPassword:
     Type: String
-    Description: Enter a password for the Vault DR Master user.
+    Description: Enter a password for the DR Vault Master user.
     NoEcho: true
     MinLength: 8
     AllowedPattern: ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$
@@ -402,12 +521,12 @@ Parameters:
       letter, 1 uppercase letter, 1 digit and 1 special character
   RetypeMasterPassword:
     Type: String
-    Description: Retype the password for the Vault DR Master user.
+    Description: Retype the password for the DR Vault Master user.
     NoEcho: true
     MinLength: 8
   VaultDRPassword:
     Type: String
-    Description: Enter a password for the Vault DR user.
+    Description: Enter a password for the DR Vault DR user.
     NoEcho: true
     MinLength: 8
     AllowedPattern: ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$
@@ -415,20 +534,20 @@ Parameters:
       1 uppercase letter, 1 digit and 1 special character
   RetypeDRPassword:
     Type: String
-    Description: Retype the password for the Vault DR user.
+    Description: Retype the password for the DR Vault DR user.
     NoEcho: true
     MinLength: 8
   VaultInstanceName:
     Type: String
-    Description: Enter a name for the Vault DR instance.
-    Default: CyberArk Vault
+    Description: Enter a name for the DR Vault instance.
+    Default: CyberArk DR Vault
   VaultHostName:
     Type: String
-    Description: Enter the host name for the Vault DR instance.
+    Description: Enter the host name for the DR Vault instance.
     MinLength: 4
   VaultInstanceType:
     Type: String
-    Description: Select the instance type of the Vault DR instance.
+    Description: Select the instance type of the DR Vault instance.
     AllowedValues:
       - m4.large
       - m4.xlarge
@@ -445,16 +564,20 @@ Parameters:
     Default: m5.large
   VaultInstanceSecurityGroups:
     Type: List<AWS::EC2::SecurityGroup::Id>
-    Description: Assign Security Groups to the Vault DR instance.
+    Description: Assign Security Groups to the DR Vault instance.
   DRInstanceSubnetId:
     Type: AWS::EC2::Subnet::Id
-    Description: Select the Subnet Id where the Vault DR instance will reside.
+    Description: Select the Subnet Id where the DR Vault instance will reside.
   Secret:
     Type: String
-    Description: Enter a Secret for DR registration.
-    MinLength: 8
+    Description: Enter a secret string for the DR user.(Optional).
     NoEcho: true
-#    AllowedPattern: ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$)
+    AllowedPattern: ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$|.{0,0}
+    ConstraintDescription: if the value isnt empty it must contain at least 1 lowercase letter, 1 uppercase letter, 1 digit and 1 special character
+  SecretRetype:
+    Type: String
+    Description: Retype DR Username Secret.
+    NoEcho: true
 Rules:
   PasswordConfirmation:
     Assertions:
@@ -466,6 +589,10 @@ Rules:
           - !Ref 'VaultDRPassword'
           - !Ref 'RetypeDRPassword'
         AssertDescription: The password confirmation does not match.
+      - Assert: !Equals
+          - !Ref 'Secret'
+          - !Ref 'SecretRetype'
+        AssertDescription: The secret confirmation does not match.
   EULAAcception:
     Assertions:
       - Assert: !Equals
@@ -484,7 +611,7 @@ Metadata:
           - LicenseFile
           - RecoveryPublicKey
       - Label:
-          default: DR Vault information
+          default: Primary Vault and DR information
         Parameters:
           - VaultPrivateIP
           - VaultAdminPassword
@@ -492,78 +619,82 @@ Metadata:
           - RetypeDRPassword
           - VaultMasterPassword
           - RetypeMasterPassword
+      - Label:
+          default: DR Vault Machine Information
+        Parameters:
           - VaultInstanceName
           - VaultHostName
           - VaultInstanceType
           - VaultInstanceSecurityGroups
           - DRInstanceSubnetId
-          - Secret
     ParameterLabels:
       EULA:
         default: License Agreement
       KeyName:
         default: Key Pair
       VaultFilesBucket:
-        default: Vault Files Bucket
+        default: S3 Bucket
       LicenseFile:
-        default: License File
+        default: Vault License File
       RecoveryPublicKey:
         default: Recovery Public Key
       VaultPrivateIP:
-        default: Vault Private IP
+        default: Primary Vault Private IP
       VaultAdminPassword:
         default: Vault Admin Password
       VaultMasterPassword:
-        default: Vault DR Master Password
+        default: DR Vault Master Password
       RetypeMasterPassword:
-        default: Retype Vault DR Master Password
+        default: Retype DR Vault Master Password
       VaultDRPassword:
-        default: Vault DR Password
+        default: DR Vault DR User Password
       RetypeDRPassword:
-        default: Retype Vault DR Password
+        default: Retype DR Vault DR User Password
       VaultInstanceName:
-        default: Vault DR Instance Name
+        default: DR Vault Instance Name
       VaultHostName:
-        default: Vault DR Host Name
+        default: DR Vault Host Name
       VaultInstanceType:
-        default: Vault DR Instance Type
+        default: DR Vault Instance Type
       VaultInstanceSecurityGroups:
-        default: Vault DR Instance Security Groups
+        default: DR Vault Instance Security Groups
       DRInstanceSubnetId:
-        default: Vault DR Instance Subnet Id
+        default: DR Vault Instance Subnet Id
       Secret:
-        default: Secret for DR registration
+        default: DR Username Secret
+      SecretRetype:
+        default: Retype DR Username Secret
 Mappings:
   RegionMap:
     us-east-1:
-      Vault: ami-01d4a7bd46088f700
+      Vault: ami-067d67ca1445a5209
     us-east-2:
-      Vault: ami-068bc4ecc92db8199
+      Vault: ami-0dbe87c3a37082b4d
     eu-west-2:
-      Vault: ami-0be1c88985ba5c3da
+      Vault: ami-078d2d55d71ec32d3
     us-west-1:
-      Vault: ami-0f1803a9c76472be5
+      Vault: ami-01b6d3607b9c455a5
     us-west-2:
-      Vault: ami-01edee6e967c17628
+      Vault: ami-0cd4e3ad8aad42a51
     ca-central-1:
-      Vault: ami-0582d8c1a70001244
+      Vault: ami-05164390c672c1172
     eu-west-1:
-      Vault: ami-09397273b9046d5b9
+      Vault: ami-0cf822f2a8c89ca7d
     eu-central-1:
-      Vault: ami-06f43402c6e002660
+      Vault: ami-03a9f45466c8b1745
     ap-southeast-1:
-      Vault: ami-0872cf43e69e28466
+      Vault: ami-01a195c73e8f3da53
     ap-southeast-2:
-      Vault: ami-0a02581b7c2a55e6f
+      Vault: ami-07b0aa6bb69361b91
     ap-northeast-2:
-      Vault: ami-0ed3745003fa46976
+      Vault: ami-04a79126206649385
     ap-northeast-1:
-      Vault: ami-02e14fe4621742bde
+      Vault: ami-00ba6baa337bb4579
     ap-south-1:
-      Vault: ami-0ff8fe4a731baa07a
+      Vault: ami-027b213ba79561465
     sa-east-1:
-      Vault: ami-04b91be9198835fc8
+      Vault: ami-006243a6d82fbdc60
     us-gov-west-1:
-      Vault: ami-0e87a36f
+      Vault: ami-680b3809
     us-gov-east-1:
-      Vault: ami-00268514ee37890b9
+      Vault: ami-0c3f9622c3fe2d74a
