--- a/aws/DRVault-Single-Deployment.yaml
+++ b/aws/DRVault-Single-Deployment.yaml
@@ -139,21 +139,6 @@ Resources:
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt 'LambdaDeployRole.Arn'
-  StoreMasterPassword:
-    Type: AWS::CloudFormation::CustomResource
-    Version: '1.0'
-    Properties:
-      ServiceToken: !GetAtt 'StorePasswordLambda.Arn'
-      Password: !Ref 'VaultMasterPassword'
-    DependsOn:
-      - LambdaDeployRole
-  StoreAdminPassword:
-    Type: AWS::CloudFormation::CustomResource
-    Properties:
-      ServiceToken: !GetAtt 'StorePasswordLambda.Arn'
-      Password: !Ref 'VaultAdminPassword'
-    DependsOn:
-      - LambdaDeployRole
   StoreDRPassword:
     Type: AWS::CloudFormation::CustomResource
     Properties:
@@ -161,24 +146,6 @@ Resources:
       Password: !Ref 'VaultDRPassword'
     DependsOn:
       - LambdaDeployRole
-  CleanMasterPassword:
-    Type: AWS::CloudFormation::CustomResource
-    Version: '1.0'
-    Properties:
-      ServiceToken: !GetAtt 'DeletePasswordLambda.Arn'
-      key: !GetAtt 'StoreMasterPassword.SsmId'
-    DependsOn:
-      - LambdaDeployRole
-      - VaultDRMachine
-  CleanAdminPassword:
-    Type: AWS::CloudFormation::CustomResource
-    Version: '1.0'
-    Properties:
-      ServiceToken: !GetAtt 'DeletePasswordLambda.Arn'
-      key: !GetAtt 'StoreAdminPassword.SsmId'
-    DependsOn:
-      - LambdaDeployRole
-      - VaultDRMachine
   CleanDRPassword:
     Type: AWS::CloudFormation::CustomResource
     Version: '1.0'
@@ -364,24 +331,7 @@ Resources:
                 Action:
                   - ssm:GetParameters
                 Resource:
-                  - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${StoreMasterPassword.SsmId}'
-                  - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${StoreAdminPassword.SsmId}'
                   - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${StoreDRPassword.SsmId}'
-        - PolicyName: VaultFilesBucketAccess
-          PolicyDocument:
-            Statement:
-              - Effect: Allow
-                Action:
-                  - s3:GetObject
-                  - s3:GetObjectVersion
-                Resource:
-                  - !Sub 'arn:${AWS::Partition}:s3:::${VaultFilesBucket}/${LicenseFile}'
-                  - !Sub 'arn:${AWS::Partition}:s3:::${VaultFilesBucket}/${RecoveryPublicKey}'
-              - Effect: Allow
-                Action:
-                  - s3:GetBucketLocation
-                Resource:
-                  - !Sub 'arn:${AWS::Partition}:s3:::${VaultFilesBucket}'
         - PolicyName: VaultInstancesKMSPolicy
           PolicyDocument:
             Statement:
@@ -446,27 +396,19 @@ Resources:
               waitAfterCompletion: 0
         configServices:
           commands:
-            1-downloadLicenseRecpub:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\VaultInit.ps1 -VaultFilesBucket ${VaultFilesBucket} -LicenseFileKey ${LicenseFile} -RecoveryPublicKey ${RecoveryPublicKey} -Region ${AWS::Region}
-              waitAfterCompletion: 0
-            2-fixENE:
-              command: >
-                powershell.exe -File C:\CyberArk\Deployment\FixENE.ps1
-              waitAfterCompletion: 0
-            3-allowDR:
+            1-allowDR:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\AllowDR.ps1 -PrimaryVaultIP ${VaultPrivateIP}
               waitAfterCompletion: 0
-            4-postInstall:
+            2-postInstall:
               command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -SSMDRPassParameterID ${StoreDRPassword.SsmId} -IsPrimaryOrDR "DR" -PrimaryVaultIP ${VaultPrivateIP} -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region} -Secret ${Secret}
+                powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -SSMDRPassParameterID ${StoreDRPassword.SsmId} -IsPrimaryOrDR "DR" -PrimaryVaultIP ${VaultPrivateIP} -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -Region ${AWS::Region} -Secret ${Secret}
               waitAfterCompletion: 0
-            5-changeKMSTag:
+            3-changeKMSTag:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\VaultTagKMS.ps1 -Role ${VaultInstancesRole} -Region ${AWS::Region}
               waitAfterCompletion: 0
-            6-ChangeHostName:
+            4-ChangeHostName:
               command: !Sub >
                 powershell.exe -Command Rename-Computer -NewName ${VaultHostName} -Force -Restart
               waitAfterCompletion: forever
@@ -491,39 +433,9 @@ Parameters:
     Type: AWS::EC2::KeyPair::KeyName
     Description: Select an existing Key Pair from your AWS account.
     ConstraintDescription: Can contain only ASCII characters.
-  VaultFilesBucket:
-    Type: String
-    Description: Enter the name of the S3 bucket containing the license and recovery public key.
-      public key.
-  LicenseFile:
-    Type: String
-    Description: Enter the path of the Vault license file within the bucket.
-    Default: license.xml
-  RecoveryPublicKey:
-    Type: String
-    Description: Enter the path of the recovery public key file within the bucket.
-    Default: recpub.key
   VaultPrivateIP:
     Type: String
     Description: Enter the Primary Vault Private IP.
-  VaultAdminPassword:
-    Type: String
-    Description: Enter a password for the Vault Administrator user.
-    NoEcho: true
-    MinLength: 8
-  VaultMasterPassword:
-    Type: String
-    Description: Enter a password for the DR Vault Master user.
-    NoEcho: true
-    MinLength: 8
-    AllowedPattern: ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$
-    ConstraintDescription: Vault DR Master password must contain at least 1 lowercase
-      letter, 1 uppercase letter, 1 digit and 1 special character
-  RetypeMasterPassword:
-    Type: String
-    Description: Retype the password for the DR Vault Master user.
-    NoEcho: true
-    MinLength: 8
   VaultDRPassword:
     Type: String
     Description: Enter a password for the DR Vault DR user.
@@ -582,10 +494,6 @@ Rules:
   PasswordConfirmation:
     Assertions:
       - Assert: !Equals
-          - !Ref 'VaultMasterPassword'
-          - !Ref 'RetypeMasterPassword'
-        AssertDescription: The password confirmation does not match.
-      - Assert: !Equals
           - !Ref 'VaultDRPassword'
           - !Ref 'RetypeDRPassword'
         AssertDescription: The password confirmation does not match.
@@ -607,24 +515,20 @@ Metadata:
         Parameters:
           - EULA
           - KeyName
-          - VaultFilesBucket
-          - LicenseFile
-          - RecoveryPublicKey
       - Label:
           default: Primary Vault and DR information
         Parameters:
           - VaultPrivateIP
-          - VaultAdminPassword
+          - Secret
+          - SecretRetype
           - VaultDRPassword
           - RetypeDRPassword
-          - VaultMasterPassword
-          - RetypeMasterPassword
       - Label:
           default: DR Vault Machine Information
         Parameters:
           - VaultInstanceName
-          - VaultHostName
           - VaultInstanceType
+          - VaultHostName
           - VaultInstanceSecurityGroups
           - DRInstanceSubnetId
     ParameterLabels:
@@ -632,20 +536,8 @@ Metadata:
         default: License Agreement
       KeyName:
         default: Key Pair
-      VaultFilesBucket:
-        default: S3 Bucket
-      LicenseFile:
-        default: Vault License File
-      RecoveryPublicKey:
-        default: Recovery Public Key
       VaultPrivateIP:
         default: Primary Vault Private IP
-      VaultAdminPassword:
-        default: Vault Admin Password
-      VaultMasterPassword:
-        default: DR Vault Master Password
-      RetypeMasterPassword:
-        default: Retype DR Vault Master Password
       VaultDRPassword:
         default: DR Vault DR User Password
       RetypeDRPassword:
